recent activity fix
